--- a/VollMedApp/backend/.eslintrc.json
+++ b/VollMedApp/backend/.eslintrc.json
@@ -14,6 +14,10 @@
         ]
     },
     "rules": {
-        "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "off"
+        "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/semi":"off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/consistent-type-imports": "off"
     }
 }
