--- a/VollMedApp/backend/docker-compose.yaml
+++ b/VollMedApp/backend/docker-compose.yaml
@@ -30,18 +30,18 @@ services:
     networks:
       - my-networks
 
-  seed:
-    build: .
-    depends_on:
-      - db
-      - app
-      - redis
-    volumes:
-      - ./population.sql:/docker-entrypoint-initdb.d/population.sql
-    restart: on-failure
-    command: sh -c "sleep 50 && apt-get update > /dev/null && apt-get install -y default-mysql-client > /dev/null && mysql -uroot -p12345 -h db < /docker-entrypoint-initdb.d/population.sql && sleep 5"
-    networks:
-      - my-networks
+  # seed:
+  #   build: .
+  #   depends_on:
+  #     - db
+  #     - app
+  #     - redis
+  #   volumes:
+  #     - ./population.sql:/docker-entrypoint-initdb.d/population.sql
+  #   restart: on-failure
+  #   command: sh -c "sleep 50 && apt-get update > /dev/null && apt-get install -y default-mysql-client > /dev/null && mysql -uroot -p12345 -h db < /docker-entrypoint-initdb.d/population.sql && sleep 5"
+  #   networks:
+  #     - my-networks
 
   redis:
     image: redis:7
