--- a/VollMedApp/backend/package.json
+++ b/VollMedApp/backend/package.json
@@ -29,6 +29,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
+      "express-validator": "^7.2.1",
       "fast-xml-parser": "^4.2.2",
       "file-type": "^18.4.0",
       "file-type-stream": "^1.0.0",
